NetBSD Problem Report #50103

From www@NetBSD.org  Thu Jul 30 15:19:30 2015
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 4219CA5864
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 30 Jul 2015 15:19:30 +0000 (UTC)
Message-Id: <20150730151929.4B6E8A6555@mollari.NetBSD.org>
Date: Thu, 30 Jul 2015 15:19:29 +0000 (UTC)
From: vchaves@ymail.com
Reply-To: vchaves@ymail.com
To: gnats-bugs@NetBSD.org
Subject: via_module.c error message doesn't look right
X-Send-Pr-Version: www-1.0

>Number:         50103
>Category:       kern
>Synopsis:       via_module.c error message doesn't look right
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Jul 30 15:20:01 +0000 2015
>Closed-Date:    Sat Sep 05 23:38:20 +0000 2015
>Last-Modified:  Sat Sep 05 23:38:20 +0000 2015
>Originator:     Vicente Chaves
>Release:        netbsd-current
>Organization:
>Environment:
NetBSD netbsd7.vbox.lab 7.99.19 NetBSD 7.99.19 (GENERIC) #1: Sat Jul 11 16:21:29 UTC 2015  vchaves@netbsd7.vbox.lab:/home/vchaves/current/obj/sys/arch/amd64/compile/GENERIC amd64
>Description:
in the function viadrminit(void) the error message mentions i915drmkms where, I believe, should mention viadrmums
>How-To-Repeat:
just read the code
>Fix:
Index: sys/external/bsd/drm2/via/via_module.c
===================================================================
RCS file: /cvsroot/src/sys/external/bsd/drm2/via/via_module.c,v
retrieving revision 1.1
diff -u -r1.1 via_module.c
--- sys/external/bsd/drm2/via/via_module.c      29 Apr 2015 11:25:36 -0000      1.1
+++ sys/external/bsd/drm2/via/via_module.c      30 Jul 2015 15:07:29 -0000
@@ -63,7 +63,7 @@

        error = drm_pci_init(via_drm_driver, NULL);
        if (error) {
-               aprint_error("i915drmkms: failed to init pci: %d\n",
+               aprint_error("viadrmums: failed to init pci: %d\n",
                    error);
                return error;
        }

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50103 CVS commit: src/sys/external/bsd/drm2/via
Date: Sat, 5 Sep 2015 23:04:01 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Sat Sep  5 23:04:01 UTC 2015

 Modified Files:
 	src/sys/external/bsd/drm2/via: via_module.c

 Log Message:
 viadrmkms is not i915drmkms; from Vicente Chaves in PR 50103.


 To generate a diff of this commit:
 cvs rdiff -u -r1.1 -r1.2 src/sys/external/bsd/drm2/via/via_module.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sat, 05 Sep 2015 23:38:20 +0000
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.