viadrmkms is not i915drmkms; from Vicente Chaves in PR 50103.