sys/external/bsd/drm2/via/via_module.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: via_module.c,v 1.1 2015/04/29 11:25:36 riastradh Exp $	*/
+/*	$NetBSD: via_module.c,v 1.2 2015/09/05 23:04:01 dholland Exp $	*/
 
 /*-
  * Copyright (c) 2015 The NetBSD Foundation, Inc.
@@ -30,7 +30,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: via_module.c,v 1.1 2015/04/29 11:25:36 riastradh Exp $");
+__KERNEL_RCSID(0, "$NetBSD: via_module.c,v 1.2 2015/09/05 23:04:01 dholland Exp $");
 
 #include <sys/types.h>
 #include <sys/module.h>
@@ -63,7 +63,7 @@ viadrm_init(void)
 
 	error = drm_pci_init(via_drm_driver, NULL);
 	if (error) {
-		aprint_error("i915drmkms: failed to init pci: %d\n",
+		aprint_error("viadrmkms: failed to init pci: %d\n",
 		    error);
 		return error;
 	}
